force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>The value you want the tested variable to be evaluated against.</description>
        <inlineHelpText>Enter the value you want the tested variable to be evaluated against.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>