force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__FilterVariable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The selected summary variable this rule evaluates.</description>
        <inlineHelpText>Choose the summary variable you want this rule to evaluate.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Filter Variable)</relationshipLabel>
        <relationshipName>FilteredConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>