force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__Rule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Parent rule for this condition.</description>
        <inlineHelpText>Parent rule for this condition (that runs this condition).</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Error Conditions</relationshipLabel>
        <relationshipName>ErrorConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>