force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__RuleTargetsQuote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleTargetsQuote__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__Scope__c, &apos;Quote&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsQuote</label>
        <type>Checkbox</type>
    </CustomField>