force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedAttribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</description>
        <inlineHelpText>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</inlineHelpText>
        <label>Tested Attribute</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__TestedField__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductAttribute__c.SBQQ__Attribute__r.SBQQ__TargetField__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Error Conditions</relationshipLabel>
        <relationshipName>ErrorConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>