force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on the Quote object that should be used in testing this condition.</description>
        <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__TestedObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>External_SKU_DH_2_0__c</fullName>
                </value>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductCode__c</fullName>
                </value>
                <value>
                    <fullName>ProdType__c</fullName>
                </value>
                <value>
                    <fullName>GS_Cost__c</fullName>
                </value>
                <value>
                    <fullName>RR_Edition__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__QuoteLineVisibility__c</fullName>
                </value>
                <value>
                    <fullName>Pass_Through_Product__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductDescription__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_1__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_2__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_3__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_1__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_2__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_3__c</fullName>
                </value>
                <value>
                    <fullName>Non_GS_Cost__c</fullName>
                </value>
                <value>
                    <fullName>Cost_Percentage__c</fullName>
                </value>
                <value>
                    <fullName>Costing_Method__c</fullName>
                </value>
                <value>
                    <fullName>Margin__c</fullName>
                </value>
                <value>
                    <fullName>Quote_Line_Product_External_SKU_DH_2_0__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>