force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedObject__c</fullName>
        <description>Object that contains the field being tested by this condition.</description>
        <inlineHelpText>Specify the object that contains the tested field.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Quote Line Group</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Configuration Attributes</fullName>
                </value>
                <value>
                    <fullName>Upgraded Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>