force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedVariable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Summary Variable in which this rule will be evaluated.</description>
        <inlineHelpText>Select the Summary Variable you want this rule to evaluate.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>