force-app/main/default/objects/SBQQ__ErrorCondition__c/validationRules/SBQQ__Tested_field_or_variable_required.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Tested_field_or_variable_required</fullName>
        <active>true</active>
        <description>Requires that either Tested Variable or Tested Field be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__TestedField__c,&quot;&quot;),ISBLANK(SBQQ__TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must specify either Tested Field or Tested Variable.</errorMessage>
    </ValidationRule>